# snakeGame

./: CMakeLists.txt  README.md
src/: Audio.cpp  Audio.h  Config.h  Food.cpp  Food.h  Game.cpp  Game.h  Renderer.cpp  Renderer.h  Snake.cpp  Snake.h  Types.h  main.cpp
web/: shell.html
